@@ -1,4 +1,4 @@
-man_MANS	=	geod.1 nad2nad.1 proj.1 cs2cs.1
+man_MANS	=	geod.1 proj.1 cs2cs.1
 
 EXTRA_DIST	=	$(man_MANS)
 
